added psvm with "hui"

--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,4 @@ gradle-app.setting
 .classpath
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,git,gradle,java
+/src/test/java/Test.java
